--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.3",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "tailwind-scrollbar": "^3.1.0"
   }
 }
